--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- Title -->
       <div class="row">
         <div class="col col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
@@ -78,21 +78,23 @@
   <!-- Features -->
 
   <section id="features">
-    <div class="row">
-      <div class="feature-box col-lg-4 col-xs-12">
-        <i class="fa-solid fa-circle-check feature-img fa-4x"></i>
-        <h3 class="features-head">Easy to use.</h3>
-        <p class="features-desc">So easy to use, even your dog could do it.</p>
-      </div>
-      <div class="feature-box col-lg-4 col-xs-12">
-        <i class="fa-solid fa-bullseye feature-img fa-4x"></i>
-        <h3 class="features-head">Elite Clientele</h3>
-        <p class="features-desc">We have all the dogs, the greatest dogs.</p>
-      </div>
-      <div class="feature-box col-lg-4 col-xs-12">
-        <i class="fa-solid fa-heart feature-img fa-4x"></i>
-        <h3 class="features-head">Guaranteed to work.</h3>
-        <p class="features-desc">Find the love of your dog's life or your money back.</p>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="feature-box col-lg-4 col-xs-12">
+          <i class="fa-solid fa-circle-check feature-img fa-4x"></i>
+          <h3 class="features-head">Easy to use.</h3>
+          <p class="features-desc">So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="feature-box col-lg-4 col-xs-12">
+          <i class="fa-solid fa-bullseye feature-img fa-4x"></i>
+          <h3 class="features-head">Elite Clientele</h3>
+          <p class="features-desc">We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="feature-box col-lg-4 col-xs-12">
+          <i class="fa-solid fa-heart feature-img fa-4x"></i>
+          <h3 class="features-head">Guaranteed to work.</h3>
+          <p class="features-desc">Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -103,8 +105,8 @@
   <section id="testimonials">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-img">
           <em>Pebbles, New York</em>
         </div>
@@ -131,7 +133,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo"src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo"src="images/Techcrunch.png" alt="tc-logo">
     <img class="press-logo"src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo"src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo"src="images/mashable.png" alt="mashable-logo">
@@ -155,7 +157,7 @@
               <h3>Chihuahua</h3>
             </div>
             <div class="card-body">
-              <h2>Free</h2>
+              <h2 class="price-text">Free</h2>
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
@@ -170,7 +172,7 @@
               <h3>Labrador</h3>
             </div>
             <div class="card-body">
-              <h2>$49 / mo</h2>
+              <h2 class="price-text">$49 / mo</h2>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
@@ -185,7 +187,7 @@
               <h3>Mastiff</h3>
             </div>
             <div class="card-body">
-              <h2>$99 / mo</h2>
+              <h2 class="price-text">$99 / mo</h2>
               <p>Pirority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
@@ -205,11 +207,11 @@
   <!-- Call to Action -->
 
   <section id="cta">
-
-    <h3 class="cta-desc">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>Download</button>
-    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
-    
+    <div class="container-fluid">
+      <h3 class="big">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>Download</button>
+      <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+    </div>
 
   </section>
 
